--- a/pageweb/styles/styles.css
+++ b/pageweb/styles/styles.css
@@ -11,6 +11,12 @@ h1 {
     color: #333;
 }
 
+.user-icon{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
 .forum {
     width: 80%;
     margin: 20px auto;
