--- a/pageweb/styles/styles.css
+++ b/pageweb/styles/styles.css
@@ -65,6 +65,16 @@ body {
     background-color: #333;
     color: white;
 }
+
+#particles-js{
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: 50% 50%;
+    position: fixed;
+    top: 0px;
+    z-index:1;
+}
 .nav-icons {
     display: flex;
     justify-content: center;
@@ -471,11 +481,6 @@ footer {
     color: #007bff;
 }
 
-.description {
-    font-size: 0.9em;
-    color: #666;
-    margin-bottom: 1em;
-}
 
 .pubDate {
     font-size: 0.8em;
@@ -548,7 +553,6 @@ footer {
 }
 /* Container Styles for Login and Register */
 .login-container{
-    width: 100%;
     max-width: 1200px;
     background-color: #fff;
     border-radius: 8px;
@@ -557,7 +561,9 @@ footer {
     text-align: center;
     justify-self: center;
     justify-items: center;
-    margin-top: 140px;
+    margin: 100px auto;
+    position:relative;
+    z-index: 10;
 }
 
 .register-container {
@@ -570,7 +576,10 @@ footer {
     text-align: center;
     justify-self: center;
     justify-items: center;
-    margin-top: 0px;
+    margin: 100px auto;
+    position:relative;
+    z-index: 10;
+
 }
 
 /* Logo Styling */
@@ -590,8 +599,6 @@ footer {
 }
 
 /* Input Fields */
-.login-container input[type="text"],
-.login-container input[type="password"],
 .register-container input[type="text"],
 .register-container input[type="email"],
 .register-container input[type="password"] {
@@ -633,14 +640,14 @@ a.back-button {
 /* Gradient Button for Connexion and S’inscrire */
 button.login-button,
 button.register-button {
-    background: linear-gradient(45deg, #6a11cb, #2575fc);
+    background: linear-gradient(45deg, #EA00FF, #07BDFF);
     color: #fff;
     border: none;
 }
 
 button.login-button:hover,
 button.register-button:hover {
-    background: linear-gradient(45deg, #2575fc, #6a11cb);
+    background: linear-gradient(45deg, #07BDFF, #EA00FF);
 }
 
 /* Black Button for Retour and S’inscrire in Login */
