--- a/pageweb/styles/styles.css
+++ b/pageweb/styles/styles.css
@@ -12,6 +12,50 @@ h1 {
     color: #333;
 }
 
+#recherchePays {
+    background: 0;
+    border: 0;
+    outline: none;
+    width: 120px;
+    max-width: 400px;
+    transition: padding 0.3s 0.2s ease;
+  
+    &:focus {
+      padding-bottom: 5px;
+    }
+&:focus + .line {
+    &:after {
+        transform: scaleX(1);
+      }
+    }
+  }
+  
+  .field {
+    position: relative;
+    transform: translateY(-20px);
+    margin: 0 auto;
+  
+    .line {
+      width: 10%;
+      height: 3px;
+      position: relative;
+      bottom: -8px;
+      background: #bdc3c7;
+  
+      &:after {
+        content: " ";
+        position: relative;
+        float: right;
+        width: 100%;
+        height: 3px;
+        
+        transform: scalex(0);
+        transition: transform 0.3s ease;
+        
+        background: #1abc9c;
+      }
+    }
+  }
 .user-icon{
     width: 50px;
     height: 50px;
