--- a/pageweb/styles/styles.css
+++ b/pageweb/styles/styles.css
@@ -168,6 +168,10 @@ body {
     border-radius: 8px;
     text-align: center;
 }
+.testimonial:hover {
+    background-color: #f0f0f0; /* Cambia el color de fondo al pasar el ratón */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); /* Aumenta la sombra */
+}
 .contact-section {
     padding: 20px;
     background-color: #ffffff;
