--- a/pageweb/styles/styles.css
+++ b/pageweb/styles/styles.css
@@ -16,6 +16,7 @@ h1 {
     color: green;
 }
 
+
 #recherchePays {
     background: 0;
     border: 0;
@@ -73,6 +74,7 @@ h1 {
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    margin-top: 80px;
 }
 
 .forum p {
@@ -177,7 +179,7 @@ body {
 }
 .contact-section {
     padding: 20px;
-    background-color: #ffffff;
+    background-color: #f0f0f0;
     margin: 10px 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -189,14 +191,6 @@ body {
     padding: 8px;
     border-radius: 4px;
     border: 1px solid #ccc;
-}
-.contact-form button {
-    background-color: #6200ea;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
 }
 
 /* Container for the questionnaire */
@@ -227,10 +221,10 @@ margin-bottom: 100px;
 
 /* Question Styling */
 .question {
-background-color: #f9f9f9;
 border: 1px solid #ddd;
 border-radius: 8px;
 padding: 15px;
+padding-right: 30px;
 margin-bottom: 50px;
 box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -243,6 +237,7 @@ color: #333;
 margin-bottom: 6px;
 }
 
+
 /* Options Styling */
 .options {
 display: flex;
@@ -250,6 +245,7 @@ flex-direction: column;
 }
 
 .options input[type="radio"] {
+color: #1abc9c;
 display: none;
 }
 
@@ -323,6 +319,8 @@ padding: 20px;
 border-radius: 12px;
 background-color: #f9f9f9;
 box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+margin:50px;
+margin-top: 80px;
 }
 
 .profile-photo {
@@ -603,7 +601,8 @@ footer {
 
 .menu-item.logo {
     position: relative;
-    left: 50px;
+    width: 50px; /* Ajustez cette taille selon vos préférences */
+    height: 50px; /* Utilisez la même dimension pour uniformiser */
     bottom: -20px; /* Pour centrer le logo par rapport aux autres éléments */
     border-radius: 80%;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
