--- a/pageweb/styles/styles.css
+++ b/pageweb/styles/styles.css
@@ -6,6 +6,14 @@ header {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+
+.messageErreur {
+    color: red;
+    font-weight: bold;
+    font-size: 17px;
+    font-family: Arial, sans-serif;
+}
+
 h1 {
     text-align: center;
     margin-top: 20px;
