--- a/pageweb/styles/styles.css
+++ b/pageweb/styles/styles.css
@@ -14,6 +14,10 @@ header {
     font-family: Arial, sans-serif;
 }
 
+.graphique {
+    width: 800px;;
+}
+
 h1 {
     text-align: center;
     margin-top: 20px;
