--- a/pageweb/styles/styles.css
+++ b/pageweb/styles/styles.css
@@ -322,7 +322,7 @@ margin-bottom: 6px;
 .popup button{
     display: block;
     width: 100%;
-    margin-top: 70px;
+    margin-top: 10%;
     padding: 10px 0;
     background: #5384D6;
     color: #fff;
