--- a/pageweb/styles/styles.css
+++ b/pageweb/styles/styles.css
@@ -1061,8 +1061,15 @@ a.back-button:hover {
     margin-top: 20px;
     font-weight: bold;
 }
+
+a:link, a:visited {
+    color: white;
+    text-decoration: none;
+}
+
+
 .creaprofil{
-    
+    margin-left: 1%;
     margin-top: 100px;
 }
 #biographie{
