--- a/pageweb/styles/styles.css
+++ b/pageweb/styles/styles.css
@@ -16,6 +16,10 @@ h1 {
     color: red;
 }
 
+#avertissementMessageFlag{
+    margin-left: 30%;
+}
+
 #messageSendTrue{
     color: green;
 }
@@ -336,8 +340,6 @@ margin-bottom: 6px;
 
 .flag-container {
     margin-top: 50px;
-}
-.flag-container {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -392,6 +394,7 @@ align-items: center;
 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 border-bottom: 2px solid #ddd; /* Légère séparation */
 }
+
 
 /*Liste des pays sélectionnés */
 #selectedCountriesList {
