--- a/pageweb/styles/styles.css
+++ b/pageweb/styles/styles.css
@@ -1,9 +1,14 @@
 
 header {
     background-color: #fff;
-    padding: 10px;
+    /*padding: 10px;*/
     text-align: center;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+#messageErreurFermetureSessions{
+    color: rgb(0, 128, 0);
+    font-weight: bold;
 }
 
 h1 {
@@ -16,12 +21,12 @@ h1 {
     color: red;
 }
 
-#avertissementMessageFlag{
+.messageFlag{
     margin-left: 30%;
 }
 
 #messageSendTrue{
-    color: green;
+    color: rgb(0, 128, 0);
 }
 
 #numberInputRegister{
