--- a/pageweb/styles/styles.css
+++ b/pageweb/styles/styles.css
@@ -17,6 +17,12 @@ h1 {
     color: #333;
 }
 
+#titreFlag{
+    text-align: center;
+    margin-top: 70px;
+    color: #333;
+}
+
 .messageErreur{
     color: red;
 }
