--- a/pageweb/styles/styles.css
+++ b/pageweb/styles/styles.css
@@ -1261,6 +1261,34 @@ a.back-button:hover {
     max-width: 600px;
     margin: 0 auto;
 }
-.titre_graph{
-    margin-top:5%;
+
+.chart-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+    margin-top: 30px;
+}
+
+.chart-card {
+    width: 300px;
+    background-color: #fff;
+    padding: 15px;
+    border-radius: 12px;
+    box-shadow: 0 0 8px rgba(0,0,0,0.1);
+    text-align: center;
+}
+
+.titre_graph {
+    padding-top:2%;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.intro-texte {
+    text-align: center;
+    max-width: 750px;
+    margin: 10px auto 40px auto;
+    color: #333;
+    font-size: 16px;
 }
